JavaScriptCore/qt/api/qscriptvalue_p.h
@@ -337,7 +337,7 @@ bool QScriptValuePrivate::isNumber()
 {
     switch (m_state) {
     case CNumber:
-        return m_number;
+        return true;
     case JSValue:
         if (isObject())
             return false;
